--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="black_transparent">#80000000</color>
     <color name="black1_transparent">#B3000000</color>
+    <color name="black2_transparent">#E6000000</color>
 
 </resources>
