--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,13 +7,13 @@
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.abidzar.themoviedb.view.ui.fragment.dashboard.DashboardFragment"
+        android:name="com.abidzar.themoviedb.view.ui.fragment.discover.DiscoverFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.abidzar.themoviedb.view.ui.fragment.home.HomeFragment"
+        android:name="com.abidzar.themoviedb.view.ui.fragment.popular.PopularFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
